vscode-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: code-server
spec:
  rules:
  - host: code.52.230.48.77.nip.io
    http:
      paths:
      - backend:
          serviceName: code
          servicePort: 8080
